src/customcss/custom-footy.css
body {
  background-image: url("../images/salmon-background3.jpg");
  background-repeat: no-repeat;
  background-size: 100% 400%;
}

h1 {
  font-family: "Permanent Marker", cursive !important;
  font-size: 3em !important;

  color: #fffb82 !important;
  text-shadow: #000 0px 0px 1px !important;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 10px !important;
  margin-top: -30px !important;
}

h2 {
  font-family: "Open Sans", sans-serif;
  font-size: 1em !important;

  color: rgb(89, 89, 89) !important;
  /* text-shadow: #fffb82 0px 0px 1px !important; */
  /* -webkit-font-smoothing: antialiased; */
  margin-top: 0px !important;
  margin-bottom: 0px !important;
  text-transform: uppercase !important;
}

h3 {
  font-family: "Permanent Marker", cursive !important;
  font-size: 2em !important;

  color: rgb(89, 89, 89) !important;
  text-shadow: #fffb82 0px 0px 4px !important;
  -webkit-font-smoothing: antialiased;
  margin-top: 0px !important;
}

h4 {
  font-family: "Permanent Marker", cursive !important;
  font-size: 2em !important;

  color: #fffb82 !important;
  text-shadow: #000 0px 0px 1px;
  -webkit-font-smoothing: antialiased;
  margin-top: 0px !important;
}

.score-number {
  font-family: "Permanent Marker", cursive !important;
  font-size: 1.5em !important;

  color: rgb(89, 89, 89) !important;
  text-shadow: #fffb82 0px 0px 4px !important;
  -webkit-font-smoothing: antialiased;
  margin-top: 0px !important;
}

h5 {
  font-family: "Open Sans", sans-serif;
  font-size: 1em !important;

  color: rgb(89, 89, 89) !important;
  /* text-shadow: #fffb82 0px 0px 1px !important; */
  /* -webkit-font-smoothing: antialiased; */
  margin-top: 0px !important;
  margin-bottom: 0px !important;
  text-transform: uppercase !important;
}


.game-loading {
  margin-top: 500px;
}

.footy-title-container {
  height: 150px;
}

/* animations */
.slide-in-left {
  -webkit-animation: slide-in-left 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
    0.3s both;
  animation: slide-in-left 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
}

.slide-in-right {
  -webkit-animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
    0.6s both;
  animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
}

.survivor-names{
  padding: 3px !important;
  margin: 3px !important;
  color: green;
  text-transform: uppercase !important;
  font-size: 1.25em;
}

.fallen-names{
  padding: 3px !important;
  margin: 3px !important;
  color: red;
  text-transform: uppercase !important;
  text-decoration: line-through;
  font-size: 1.25em;
}

.stats-title {
  margin-top: 10px !important;
}

#root {
  margin: 10px;
  margin-top: 20px;
}

#sign-up-button {
  margin: 10px;
}

.ui.yellow,
.ui.yellow.button {
  color: #fffb82;
  background-color: rgb(255, 251, 130, 0.1);
  box-shadow: 0px 0px 0px 2px #fffb82 inset;
}

.yellow.button.fixture-team-button {
  padding-left: 10px;
  padding-right: 10px;
  margin: 0px
}

.ui.yellow.button:hover {
  color: #000000;
  background: #000000;
  background-color: #fffb82;
}

.ui.yellow.button:focus {
  color: #000000;
  background: #000000;
  background-color: #fffb82;
}

.text-yellow {
  color: #fffb82 !important;
}

.disabled {
  filter: grayscale(100%);
  opacity: "0.3";
}

.game-page-balls {
  min-height: 10vh !important;
  margin-bottom: 20px;
}

/* fixture padding */
.fixture-team-button{
  
  padding-top: 5px !important;
  padding-bottom: 5px !important;
  padding-left: 20px !important;
  padding-right: 20px !important;
}

/* spacing on fixture buttons */
.four.wide.column {
  margin: 2px !important;
  padding: 0px !important;
}


/* vs column text */
.vs-text {
  padding: 0px !important;
  font-size: 1.5em;
  margin-left: 0px;
  margin-right: 0px;
}

#football-1,
#football-5 {
  max-width: 20px;
  max-height: 20px;
}

#football-2,
#football-4 {
  max-width: 40px;
  max-height: 40px;
}

#football-3 {
  max-width: 80px;
  max-height: 80px;
}

#football-1 {
  -webkit-animation: bounce-out-bottom-small 1s 2.5s both;
  animation: bounce-out-bottom-small 1s 2.5s both;
}

#football-2 {
  -webkit-animation: bounce-out-bottom-medium 1s 1s both;
  animation: bounce-out-bottom-medium 1s 1s both;
}

#football-3 {
  -webkit-animation: no-bounce-out-bottom 1s 3s both;
  animation: no-bounce-out-bottom 1s 3s both;
}

#football-3.roll-out-right {
  -webkit-animation: roll-out-right 0.6s ease-in 0.3s both;
  animation: roll-out-right 0.6s ease-in 0.3s both;
}

#football-4 {
  -webkit-animation: bounce-out-bottom-medium 1s 2s both;
  animation: bounce-out-bottom-medium 1s 2s both;
}

#football-5 {
  -webkit-animation: bounce-out-bottom-small 1s 1.5s both;
  animation: bounce-out-bottom-small 1s 1.5s both;
}

.shake-horizontal {
  -webkit-animation: shake-horizontal 0.8s
    cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
  animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
}

#football-1.shake-horizontal {
  -webkit-animation: shake-horizontal 0.8s
    cubic-bezier(0.455, 0.03, 0.515, 0.955) 13s both;
  animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) 13s
    both;
}

#football-2.shake-horizontal {
  -webkit-animation: shake-horizontal 0.8s
    cubic-bezier(0.455, 0.03, 0.515, 0.955) 3s both;
  animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) 3s
    both;
}

#football-3.shake-horizontal {
  -webkit-animation: shake-horizontal 0.8s
    cubic-bezier(0.455, 0.03, 0.515, 0.955) 20s both;
  animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) 20s
    both;
}

#football-4.shake-horizontal {
  -webkit-animation: shake-horizontal 0.8s
    cubic-bezier(0.455, 0.03, 0.515, 0.955) 8s both;
  animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) 8s
    both;
}
/* ... */

